--- a/pom.xml
+++ b/pom.xml
@@ -54,15 +54,27 @@
   </repositories>
 
   <dependencies>
-    <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-core</artifactId>
-      <version>1.0.3</version>
+   <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>2.6.0</version>
     </dependency>
+    <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-hdfs</artifactId>
+            <version>2.6.0</version>
+    </dependency>
+    <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-client</artifactId>
+            <version>2.6.0</version>
+    </dependency>
+
     <dependency>
       <groupId>org.apache.hbase</groupId>
       <artifactId>hbase</artifactId>
-      <version>0.92.1</version>
+      <version>1.2.1</version>
+      <type>pom</type>
       <exclusions>
         <exclusion>
           <artifactId>maven-release-plugin</artifactId>
@@ -70,8 +82,19 @@
         </exclusion>
       </exclusions>
     </dependency>
+     <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-common</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+	<dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+
     <!-- Hadoop requires commons-io but doesn't list it as an explicit
-         or transient dependency. include it manually. -->
+                  or transient dependency. include it manually. -->
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
